--- a/web/style.css
+++ b/web/style.css
@@ -10,10 +10,18 @@ html {
   overflow-x: hidden;
 }
 
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  width: 100%;
+  height: 90%;
+}
+
 nav {
   background-color: #0c4432;
   font-family: "Ubuntu Mono", "Courier New", Courier, monospace;
-  padding: 1rem 0.8rem;
+  padding: 0.5rem 0.8rem;
   font-size: 1rem;
   font-weight: bold;
   user-select: none;
@@ -24,7 +32,7 @@ pre {
   font-family: "Ubuntu Mono", "Courier New", Courier, monospace;
   display: inline-block;
   width: 90%;
-  height: 75vh;
+  height: 100%;
   overflow-y: scroll;
   background-color: #1b1d1c;
   color: #49db75;
@@ -32,7 +40,9 @@ pre {
   margin: 0.5rem 3rem;
   font-size: 1.4rem;
   white-space: pre-wrap;
-  user-select: none;
+  user-select: text;
+  flex-grow: 1;
+  cursor: text;
 }
 
 input[type="text"] {
