--- a/web/style.css
+++ b/web/style.css
@@ -15,7 +15,7 @@ html {
   flex-direction: column;
   align-items: stretch;
   width: 100%;
-  height: 90%;
+  height: 85%;
 }
 
 nav {
@@ -56,4 +56,17 @@ input[type="text"] {
   color: #49db75;
   outline: none;
   border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  pre {
+    margin: 0.5rem;
+    width: 95%;
+    overflow-y: hidden;
+  }
+
+  input[type="text"] {
+    margin: 0.5rem;
+    width: 95%;
+  }
 }
