--- a/web/style.css
+++ b/web/style.css
@@ -16,6 +16,8 @@ html {
   align-items: stretch;
   width: 100%;
   height: 85%;
+  margin: 0;
+  padding: 0;
 }
 
 nav {
@@ -26,6 +28,9 @@ nav {
   font-weight: bold;
   user-select: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  /* position: absolute;
+  top: 0;
+  width: 100%; */
 }
 
 pre {
@@ -60,13 +65,13 @@ input[type="text"] {
 
 @media (max-width: 768px) {
   pre {
-    margin: 0.5rem;
-    width: 95%;
+    margin: 0rem;
+    width: 100%;
     overflow-y: hidden;
   }
 
   input[type="text"] {
-    margin: 0.5rem;
-    width: 95%;
+    margin: 0rem;
+    width: 100%;
   }
 }
