--- a/web/style.css
+++ b/web/style.css
@@ -15,7 +15,7 @@ html {
   flex-direction: column;
   align-items: stretch;
   width: 100%;
-  height: 85%;
+  height: 95%;
   margin: 0;
   padding: 0;
 }
@@ -28,9 +28,6 @@ nav {
   font-weight: bold;
   user-select: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-  /* position: absolute;
-  top: 0;
-  width: 100%; */
 }
 
 pre {
@@ -38,29 +35,29 @@ pre {
   display: inline-block;
   width: 90%;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: hidden;
   background-color: #1b1d1c;
   color: #49db75;
   padding: 1rem;
-  margin: 0.5rem 3rem;
+  margin: 0.2rem 3rem;
   font-size: 1.4rem;
   white-space: pre-wrap;
   user-select: text;
   flex-grow: 1;
   cursor: text;
+  border: inset 6px #646464;
 }
 
 input[type="text"] {
-  -webkit-appearance: none;
   font-family: "Ubuntu Mono", "Courier New", Courier, monospace;
-  width: 90%;
-  padding: 0.5rem;
-  margin: 0.5rem 3rem;
-  font-size: 2rem;
+  width: 91%;
+  padding: 0.2rem;
+  margin: 0.2rem 3rem;
+  font-size: 1.8rem;
   background: #000000;
   color: #49db75;
   outline: none;
-  border-radius: 5px;
+  border: inset 6px #646464;
 }
 
 @media (max-width: 768px) {
