--- a/web/style.css
+++ b/web/style.css
@@ -10,8 +10,8 @@ html {
   background-color: #bbad92;
   color: #2a2a2a;
   width: 100%;
-  height: 100%;
-  overflow-x: hidden;
+  height: 100dvh;
+  overflow: hidden;
 }
 
 .column {
@@ -19,9 +19,10 @@ html {
   flex-direction: column;
   align-items: stretch;
   width: 100%;
-  height: 95%;
+  height: 94dvh;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 nav {
@@ -53,8 +54,8 @@ nav a:hover {
 
 pre {
   display: inline-block;
-  width: 80%;
-  height: 100%;
+  width: 100dvh;
+  height: 100dvh;
   /* Allow scrolling but hide the scrollbar */
   overflow-y: auto;
   padding: 1rem;
@@ -82,7 +83,7 @@ pre::-webkit-scrollbar {
 }
 
 input[type="text"] {
-  width: 80%;
+  width: 100dvh;
   padding: 0.5rem;
   letter-spacing: 1px;
   margin: 0.2rem auto 0.8rem auto;
