--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -97,8 +97,8 @@ pre::-webkit-scrollbar {
     margin: 0rem;
     width: 99%;
     overflow-y: auto;
-    font-size: 1.1rem !important;
-    line-height: 1.2rem !important;
+    font-size: 1.3rem !important;
+    line-height: 1.4rem !important;
   }
 }
 
@@ -228,4 +228,31 @@ input.themeRetroGlow {
 input.themeRetroGlowAmber {
   box-shadow: inset 0 0 30px rgba(126, 88, 17, 0.25), inset 0 0 60px rgba(122, 84, 14, 0.12);
   text-shadow: 0 0 2px #ffb347, 0 0 5px rgba(255, 165, 0, 0.6);
+}
+
+#modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #000000;
+  padding: 1rem;
+  display: none;
+  width: 50%;
+  z-index: 20;
+  border: 3px solid currentcolor;
+  box-shadow: none;
+}
+
+#modal button {
+  font-family: inherit;
+  font-size: inherit;
+  cursor: url('amiga_wb13_normal.png'), pointer;
+  border: none;
+  background-color: #000000;
+  color: inherit;
+  position: absolute;
+  left: 50%;
+  bottom: 1rem;
+  transform: translateX(-50%);
 }
