--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -100,6 +100,10 @@ pre::-webkit-scrollbar {
     font-size: 1.3rem !important;
     line-height: 1.4rem !important;
   }
+  #modal {
+    width: 90% !important;
+    top: 40% !important;
+  }
 }
 
 nav a {
